# tensorflow_backend

./: CMakeLists.txt  README.md
cmake/: TritonTensorFlowBackendConfig.cmake.in
mirror/: README.md  tensorflow_backend_tf.cc
src/: tensorflow.cc  tensorflow_backend_tf.cc  tensorflow_backend_tf.h  tensorflow_utils.cc  tensorflow_utils.h
